# uni-jit

./: .gitignore  .gitmodules  CHANGELOG-ZH.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-embedding-validation.yml  ci.yml  continuous-validation.yml  core-platform-validation.yml  language-baselines.yml  publish-release.yml  release-metadata-validation.yml  release.yml  sanitizer-validation.yml  stress-and-fuzz-validation.yml
benchmark/: CMakeLists.txt  README.md  bounded_memory.cpp  cfg_float64.cpp  cfg_simd.cpp  core_arithmetic.cpp  fast_call.cpp  patch_cell.cpp
benchmark/lua/: embedded_runner.cpp  float_call.lua  float_parameter_loop.lua  integer_call.lua  integer_conditional_loop.lua  integer_guarded_loop.lua  integer_loop.lua  integer_parameter_loop.lua  numeric_recurrence.lua  run_integer.py  run_reference.py
benchmark/pocketpy/: call_runner.cpp  cpython_driver.py  numeric_call.py  run_cpython.py
benchmark/quickjs/: call_runner.cpp  numeric_call.js  run_v8.py
benchmark/references/: CMakeLists.txt
cmake/: UniJITConfig.cmake.in  unijit-c-api.map
doc/: ARCHITECTURE.md  ASSUMPTIONS.md  ATOMICS.md  CODE_CACHE.md  COMPILATION_LIMITS.md  COMPILATION_SCHEDULER.md  DEOPTIMIZATION.md  EMBEDDING_C_API.md  FAST_CALLS.md  FRAME_LOCALS.md  LOW_LEVEL_CAPABILITIES.md  LUA_FRONTEND.md  MATERIALIZATION.md  ON_STACK_REPLACEMENT.md  PATCH_CELLS.md  POCKETPY_FRONTEND.md  PORTABILITY.md  PORTABLE_IR.md  PORTABLE_SIMD.md  QUALIFICATION.md  QUICKJS_FRONTEND.md  RELEASING.md  RUNTIME.md  STACK_MAPS.md  TARGET_PROFILES.md  TIERING.md  TRUSTED_OBJECTS.md  TYPED_MEMORY.md
docs/: ARCHITECTURE.md  LUA_FRONTEND.md  RELEASING.md
frontend/lua/: CMakeLists.txt  float_translator.cpp  float_translator.h  jit_module.cpp  unijit_lua.h
frontend/pocketpy/: CMakeLists.txt  counted_loop_translator.cpp  counted_loop_translator.h  jit_module.cpp  source_translator.cpp  source_translator.h  unijit_pocketpy.h
frontend/quickjs/: CMakeLists.txt  counted_loop_translator.cpp  counted_loop_translator.h  jit_module.cpp  source_translator.cpp  source_translator.h  unijit_quickjs.h
frontends/lua/: CMakeLists.txt  jit_module.cpp
include/unijit/: embedding.h  status.h
include/unijit/ir/: atomic.h  control_flow.h  fast_call.h  function.h  interpreter.h  memory.h  object.h  optimizer.h  package.h  patch_cell.h  vector.h
include/unijit/jit/: capability.h  code_cache.h  compilation_scheduler.h  compiler.h  stack_map.h  target.h  tiering.h
include/unijit/runtime/: assumption.h  deoptimization.h  execution_context.h  materialization.h  memory_region.h  on_stack_replacement.h  patch_cell.h  trusted_object.h
src/: CMakeLists.txt  embedding.cpp
src/ir/: atomic_access.cpp  atomic_access.h  control_flow.cpp  function.cpp  interpreter.cpp  memory_access.cpp  memory_access.h  object_access.cpp  object_access.h  optimizer.cpp  package.cpp  package_sha256.cpp  package_sha256.h  vector.cpp  verifier.cpp
src/jit/: atomic_fallback.cpp  atomic_fallback.h  capability.cpp  code_buffer.h  code_cache.cpp  compilation_scheduler.cpp  compiler.cpp  executable_memory.cpp  executable_memory.h  register_allocator.cpp  register_allocator.h  stack_map_requirements.h  target.cpp  tiering.cpp
src/jit/backend/aarch64/: lower.cpp  lower.h
src/jit/backend/riscv64/: lower.cpp  lower.h
src/jit/backend/x86_64/: lower.cpp  lower.h
src/runtime/: assumption.cpp  deoptimization.cpp  execution_context.cpp  materialization.cpp  on_stack_replacement.cpp
test/: CMakeLists.txt  atomic_litmus.cpp  c_api_exports_test.py  code_cache_stress.cpp  compilation_scheduler_stress.cpp  differential_fuzz.cpp  embedding_test.c  fast_call_stress.cpp  lua_benchmark_test.py  lua_frontend_test.cpp  patch_cell_stress.cpp  performance_gate_test.py  pocketpy_reference_test.c  pocketpy_translator_test.cpp  portable_ir_test.cpp  quickjs_frontend_test.cpp  release_tool_test.py  test_main.cpp
test/package/: CMakeLists.txt  embedding.c  main.cpp
tool/: c_api_exports.py  c_api_v1_symbols.txt  performance_gate.py  release.py
tools/: release.py
